Update to schemas 1.2.0 (#21)
* Run npm run generate:server:latest

* Update schemas and annotator version

* Add generate:server:version script

* Update npm scripts
