# server/openapi_server/models/__init__.py
@@ -14,3 +14,4 @@ from openapi_server.models.text_contact_annotation_request import TextContactAnn
 from openapi_server.models.text_contact_annotation_response import TextContactAnnotationResponse
 from openapi_server.models.tool import Tool
 from openapi_server.models.tool_dependencies import ToolDependencies
+from openapi_server.models.tool_type import ToolType
