# server/openapi_server/openapi/openapi.yaml
@@ -6,13 +6,13 @@ info:
     url: https://nlpsandbox.io
   description: |
     # Introduction
-    A contact annotator takes as input a clinical note and outputs a list of predicted contact annotations found in the clinical note. This OpenAPI document describes the specification of a contact Annotator. This specification includes the schemas of the input and output data, and the conditions that this annotator must meet if you want to benchmark its performance on [nlpsandbox.io](https://nlpsandbox.io).
+    A contact annotator takes as input a clinical note and outputs a list of predicted contact annotations found in the clinical note. This OpenAPI document describes the specification of the NLP Sandbox Contact Annotator API. This specification includes the schemas of the input and output data, and the requirements that this annotator must meet if you want to benchmark its performance on [nlpsandbox.io](https://nlpsandbox.io).
     # Getting Started
-    The GitHub repository (will be added later) [nlpsandbox/contact-annotator-example](https://github.com/nlpsandbox/contact-annotator-example) provides a rules-based example implementation of a Python-Flask contact Annotator. By the end of the tutorial available in the README, you will have built a Docker image for a simple contact Annotator. You will then be able to submit this image to [nlpsandbox.io](https://nlpsandbox.io) to benchmark its performance.
+    The GitHub repository [nlpsandbox/contact-annotator-example](https://github.com/nlpsandbox/contact-annotator-example) provides a rules-based example implementation of the NLP Sandbox Contact Annotator API in Python-Flask. By the end of the tutorial available in the README, you will have built a Docker image for this NLP Sandbox tool. You will then be able to submit this image to [nlpsandbox.io](https://nlpsandbox.io) to benchmark its performance.
     # Benchmarking Requirements
-    Your NLP Sandbox tool must meet the following conditions before evaluating its performance on [nlpsandbox.io](https://nlpsandbox.io).
+    Your NLP Sandbox tool must meet the following requirements before evaluating its performance on [nlpsandbox.io](https://nlpsandbox.io).
     - The endpoint `/` must redirect to `/api/v1/tool`.
-    - The endpoint `/ui` must redirect to the web interface (UI).
+    - The endpoint `/ui` must redirect to the Swagger User Interface (UI).
     - The output of this tool must be reproducible: a given input should always
       generate the same output.
 
@@ -22,14 +22,14 @@ info:
       connect to remote servers.
 
     # Examples
-    - [Contact Annotator Example (Python)](https://github.com/nlpsandbox/contact-annotator-example)
+    - [NLP Sandbox Contact Annotator Example (Python)](https://github.com/nlpsandbox/contact-annotator-example)
   license:
     name: Apache 2.0
-    url: https://github.com/nlpsandbox/nlpsandbox-schemas/blob/develop/LICENSE
+    url: https://github.com/nlpsandbox/nlpsandbox-schemas/blob/main/LICENSE
   title: NLP Sandbox Contact Annotator API
-  version: 1.1.2
+  version: 1.2.0
   x-logo:
-    url: https://nlpsandbox.github.io/nlpsandbox-schemas/logo.png
+    url: https://github.com/nlpsandbox/nlpsandbox-schemas/raw/main/docs/logo.png
 servers:
 - url: http://example.com/api/v1
 - url: https://example.com/api/v1
@@ -395,10 +395,18 @@ components:
       type: string
     ToolType:
       description: The type of this tool
+      enum:
+      - nlpsandbox:contact-annotator
+      - nlpsandbox:covid-symptom-annotator
+      - nlpsandbox:data-node
+      - nlpsandbox:date-annotator
+      - nlpsandbox:id-annotator
+      - nlpsandbox:location-annotator
+      - nlpsandbox:person-name-annotator
+      - nlpsandbox:phi-annotator
+      - nlpsandbox:phi-deidentifier
       example: nlpsandbox:date-annotator
-      maxLength: 60
-      minLength: 3
-      pattern: ^[a-z0-9]+(?:-[a-z0-9]+)*(:)[a-z0-9]+(?:-[a-z0-9]+)*$
+      title: ToolType
       type: string
     Tool:
       description: Information about an NLP tool
@@ -412,7 +420,7 @@ components:
         authorEmail: author@example.com
         url: https://example.com
         type: nlpsandbox:date-annotator
-        apiVersion: 1.1.2
+        apiVersion: 1.2.0
       properties:
         name:
           description: The tool name
@@ -432,7 +440,7 @@ components:
           type: string
         description:
           description: A short, one-sentence summary of the tool
-          maxLength: 100
+          maxLength: 280
           type: string
         author:
           description: The author of the tool
@@ -446,12 +454,7 @@ components:
           format: uri
           type: string
         type:
-          description: The type of this tool
-          example: nlpsandbox:date-annotator
-          maxLength: 60
-          minLength: 3
-          pattern: ^[a-z0-9]+(?:-[a-z0-9]+)*(:)[a-z0-9]+(?:-[a-z0-9]+)*$
-          type: string
+          $ref: '#/components/schemas/ToolType'
         apiVersion:
           description: The version of the tool OpenAPI specification
           minLength: 1
@@ -483,7 +486,7 @@ components:
           authorEmail: author@example.com
           url: https://example.com
           type: nlpsandbox:date-annotator
-          apiVersion: 1.1.2
+          apiVersion: 1.2.0
         - name: awesome-nlp-tool
           version: 1.0.6
           license: apache-2.0
@@ -493,7 +496,7 @@ components:
           authorEmail: author@example.com
           url: https://example.com
           type: nlpsandbox:date-annotator
-          apiVersion: 1.1.2
+          apiVersion: 1.2.0
       properties:
         tools:
           description: A list of tools
